[package]
    name    = "rc-http-sim"
    version = "0.1.0"
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    axum = { git = "https://github.com/tokio-rs/axum.git" }
    serde = { version = "1.0.192", features = [
        "derive",
    ] }
    tokio = { version = "1.34.0", features = [
        "macros",
        "rt-multi-thread",
    ] }
    serde_json = "1.0"
